--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-FlaskApp/__pycache__/*
-FlaskApp/__pycache__/__init__.cpython-310.pyc
-FlaskApp/__pycache__/views.cpython-310.pyc
+FlaskApp/__pycache__/
